; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/drx39xyj/extr_drxj.c_drx39xxj_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/drx39xyj/extr_drxj.c_drx39xxj_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { i64, %struct.drx39xxj_state* }
%struct.drx39xxj_state = type { %struct.drx_demod_instance* }
%struct.drx_demod_instance = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@DVB_FE_DEVICE_RESUME = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"drx39xxj_init(): DRX open failed rc=%d!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @drx39xxj_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drx39xxj_init(%struct.dvb_frontend* %0) #0 {
  %2 = alloca %struct.dvb_frontend*, align 8
  %3 = alloca %struct.drx39xxj_state*, align 8
  %4 = alloca %struct.drx_demod_instance*, align 8
  %5 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %2, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 1
  %8 = load %struct.drx39xxj_state*, %struct.drx39xxj_state** %7, align 8
  store %struct.drx39xxj_state* %8, %struct.drx39xxj_state** %3, align 8
  %9 = load %struct.drx39xxj_state*, %struct.drx39xxj_state** %3, align 8
  %10 = getelementptr inbounds %struct.drx39xxj_state, %struct.drx39xxj_state* %9, i32 0, i32 0
  %11 = load %struct.drx_demod_instance*, %struct.drx_demod_instance** %10, align 8
  store %struct.drx_demod_instance* %11, %struct.drx_demod_instance** %4, align 8
  store i32 0, i32* %5, align 4
  %12 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %13 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @DVB_FE_DEVICE_RESUME, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %30

17:                                               ; preds = %1
  %18 = load %struct.drx_demod_instance*, %struct.drx_demod_instance** %4, align 8
  %19 = getelementptr inbounds %struct.drx_demod_instance, %struct.drx_demod_instance* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 0, i32* %21, align 4
  %22 = load %struct.drx_demod_instance*, %struct.drx_demod_instance** %4, align 8
  %23 = call i32 @drxj_open(%struct.drx_demod_instance* %22)
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %17
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @pr_err(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %27)
  br label %29

29:                                               ; preds = %26, %17
  br label %33

30:                                               ; preds = %1
  %31 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %32 = call i32 @drx39xxj_set_powerstate(%struct.dvb_frontend* %31, i32 1)
  br label %33

33:                                               ; preds = %30, %29
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @drxj_open(%struct.drx_demod_instance*) #1

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @drx39xxj_set_powerstate(%struct.dvb_frontend*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
